fix: チャットメッセージ一覧を継続取得の可否を含むレスポンス形式へ変更